--- a/FirstMVC/Views/Work/Details.cshtml
+++ b/FirstMVC/Views/Work/Details.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>Work Details for id @ViewBag.Id</h2>
-<p>Details for id @ViewBag.Id</p>
+<p>Details for id @ViewBag.Id</p><p>Details for id @ViewBag.Id</p>
 <p>Details for idx @ViewBag.Idx</p>
